スタッキングの仕組みはわかったから早く実践をしてみたいな

--- a/kagglebook-master/kaggle.ipynb
+++ b/kagglebook-master/kaggle.ipynb
@@ -6778,22 +6778,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "284701ce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [104]\u001b[0m, in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m log_loss\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KFold\n\u001b[0;32m---> 23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mch07\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m models\n",
-      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ---------------------------------\n",
     "# データ等の準備\n",
@@ -6817,7 +6805,7 @@
     "\n",
     "from sklearn.metrics import log_loss\n",
     "from sklearn.model_selection import KFold\n",
-    "from .ch07 import models \n",
+    "from ch07.models import Model1Xgb, Model1NN, Model2Linear\n",
     "\n",
     "\n",
     "\n",
@@ -6826,8 +6814,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "08d0a88e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_cv(model, train_x, train_y, test_x):\n",
+    "    preds = []\n",
+    "    preds_test = []\n",
+    "    va_idxes = []\n",
+    "    \n",
+    "    kf = KFold(n_splits=4, shuffle=True, random_state=71)\n",
+    "    \n",
+    "    for i, (tr_idx, va_idx) in enumerate(kf.split(train_x)):\n",
+    "        tr_x, va_x = train_x.iloc[tr_idx], train_x.iloc[va_idx]\n",
+    "        tr_y, va_y = train_y.iloc[tr_idx], train_y.iloc[va_idx]\n",
+    "        model.fit(tr_x,tr_y, va_x, va_y)\n",
+    "        pred = model.predict(va_x)\n",
+    "        preds.append(pred)\n",
+    "        pred_test = model.predict(test_x)\n",
+    "        preds_test.append(pred_test)\n",
+    "        va_idxes.append(va_idx)\n",
+    "    print(va_idxes)  \n",
+    "    va_idxes = np.concatenate(va_idxes)\n",
+    "    print(va_idxes)\n",
+    "    preds = np.concatenate(preds, axis=0)\n",
+    "    order = np.argsort(va_idxes)\n",
+    "    pred_train = preds[order]\n",
+    "    \n",
+    "    preds_test = np.mean(preds_test, axis=0)\n",
+    "    return pred_train, preds_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "06155982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21:22:02] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[0]\ttrain-logloss:0.54088\teval-logloss:0.55003\n",
+      "[1]\ttrain-logloss:0.45269\teval-logloss:0.47182\n",
+      "[2]\ttrain-logloss:0.39482\teval-logloss:0.42026\n",
+      "[3]\ttrain-logloss:0.35198\teval-logloss:0.38520\n",
+      "[4]\ttrain-logloss:0.32021\teval-logloss:0.36150\n",
+      "[5]\ttrain-logloss:0.29673\teval-logloss:0.34463\n",
+      "[6]\ttrain-logloss:0.27610\teval-logloss:0.32900\n",
+      "[7]\ttrain-logloss:0.25886\teval-logloss:0.31670\n",
+      "[8]\ttrain-logloss:0.24363\teval-logloss:0.30775\n",
+      "[9]\ttrain-logloss:0.23153\teval-logloss:0.30093\n",
+      "[21:22:03] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[0]\ttrain-logloss:0.53891\teval-logloss:0.54864\n",
+      "[1]\ttrain-logloss:0.45219\teval-logloss:0.47149\n",
+      "[2]\ttrain-logloss:0.39574\teval-logloss:0.41998\n",
+      "[3]\ttrain-logloss:0.35476\teval-logloss:0.38413\n",
+      "[4]\ttrain-logloss:0.32218\teval-logloss:0.35626\n",
+      "[5]\ttrain-logloss:0.29945\teval-logloss:0.33910\n",
+      "[6]\ttrain-logloss:0.27783\teval-logloss:0.32552\n",
+      "[7]\ttrain-logloss:0.26326\teval-logloss:0.31573\n",
+      "[8]\ttrain-logloss:0.24780\teval-logloss:0.30592\n",
+      "[9]\ttrain-logloss:0.23369\teval-logloss:0.29596\n",
+      "[21:22:03] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[0]\ttrain-logloss:0.54332\teval-logloss:0.55058\n",
+      "[1]\ttrain-logloss:0.45437\teval-logloss:0.46830\n",
+      "[2]\ttrain-logloss:0.39712\teval-logloss:0.41763\n",
+      "[3]\ttrain-logloss:0.35413\teval-logloss:0.38086\n",
+      "[4]\ttrain-logloss:0.32187\teval-logloss:0.35824\n",
+      "[5]\ttrain-logloss:0.29769\teval-logloss:0.33834\n",
+      "[6]\ttrain-logloss:0.27822\teval-logloss:0.32579\n",
+      "[7]\ttrain-logloss:0.26050\teval-logloss:0.31308\n",
+      "[8]\ttrain-logloss:0.24437\teval-logloss:0.30016\n",
+      "[9]\ttrain-logloss:0.23099\teval-logloss:0.29331\n",
+      "[21:22:03] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[0]\ttrain-logloss:0.54166\teval-logloss:0.55012\n",
+      "[1]\ttrain-logloss:0.45309\teval-logloss:0.46965\n",
+      "[2]\ttrain-logloss:0.39439\teval-logloss:0.41932\n",
+      "[3]\ttrain-logloss:0.35366\teval-logloss:0.38286\n",
+      "[4]\ttrain-logloss:0.31902\teval-logloss:0.35792\n",
+      "[5]\ttrain-logloss:0.29187\teval-logloss:0.33824\n",
+      "[6]\ttrain-logloss:0.27289\teval-logloss:0.32628\n",
+      "[7]\ttrain-logloss:0.25669\teval-logloss:0.31550\n",
+      "[8]\ttrain-logloss:0.23894\teval-logloss:0.30375\n",
+      "[9]\ttrain-logloss:0.22701\teval-logloss:0.29646\n",
+      "[array([   6,   10,   11, ..., 9994, 9995, 9997]), array([   3,    5,   15, ..., 9981, 9985, 9987]), array([   0,    1,    7, ..., 9992, 9998, 9999]), array([   2,    4,    8, ..., 9990, 9993, 9996])]\n",
+      "[   6   10   11 ... 9990 9993 9996]\n",
+      "Epoch 1/10\n",
+      "59/59 [==============================] - 1s 5ms/step - loss: 0.4227 - val_loss: 0.3840\n",
+      "Epoch 2/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.3601 - val_loss: 0.3794\n",
+      "Epoch 3/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.3371 - val_loss: 0.3798\n",
+      "Epoch 4/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.3198 - val_loss: 0.3618\n",
+      "Epoch 5/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2966 - val_loss: 0.3494\n",
+      "Epoch 6/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2731 - val_loss: 0.3328\n",
+      "Epoch 7/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2419 - val_loss: 0.3121\n",
+      "Epoch 8/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2163 - val_loss: 0.2999\n",
+      "Epoch 9/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1982 - val_loss: 0.2928\n",
+      "Epoch 10/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1836 - val_loss: 0.2983\n",
+      "79/79 [==============================] - 0s 836us/step\n",
+      "313/313 [==============================] - 0s 713us/step\n",
+      "Epoch 1/10\n",
+      "59/59 [==============================] - 1s 4ms/step - loss: 0.4650 - val_loss: 0.3770\n",
+      "Epoch 2/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3699 - val_loss: 0.3647\n",
+      "Epoch 3/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3458 - val_loss: 0.3608\n",
+      "Epoch 4/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3216 - val_loss: 0.3450\n",
+      "Epoch 5/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3011 - val_loss: 0.3359\n",
+      "Epoch 6/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2777 - val_loss: 0.3188\n",
+      "Epoch 7/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2458 - val_loss: 0.2989\n",
+      "Epoch 8/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2268 - val_loss: 0.2918\n",
+      "Epoch 9/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2025 - val_loss: 0.2765\n",
+      "Epoch 10/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1866 - val_loss: 0.2713\n",
+      "79/79 [==============================] - 0s 731us/step\n",
+      "313/313 [==============================] - 0s 695us/step\n",
+      "Epoch 1/10\n",
+      "59/59 [==============================] - 1s 4ms/step - loss: 0.4275 - val_loss: 0.3778\n",
+      "Epoch 2/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3719 - val_loss: 0.3651\n",
+      "Epoch 3/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3532 - val_loss: 0.3526\n",
+      "Epoch 4/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3333 - val_loss: 0.3448\n",
+      "Epoch 5/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.3140 - val_loss: 0.3358\n",
+      "Epoch 6/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2890 - val_loss: 0.3196\n",
+      "Epoch 7/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2580 - val_loss: 0.3004\n",
+      "Epoch 8/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2298 - val_loss: 0.2843\n",
+      "Epoch 9/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2113 - val_loss: 0.2842\n",
+      "Epoch 10/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1876 - val_loss: 0.2779\n",
+      "79/79 [==============================] - 0s 742us/step\n",
+      "313/313 [==============================] - 0s 688us/step\n",
+      "Epoch 1/10\n",
+      "59/59 [==============================] - 1s 4ms/step - loss: 0.4477 - val_loss: 0.3728\n",
+      "Epoch 2/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3711 - val_loss: 0.3593\n",
+      "Epoch 3/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3440 - val_loss: 0.3547\n",
+      "Epoch 4/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.3243 - val_loss: 0.3452\n",
+      "Epoch 5/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.3021 - val_loss: 0.3348\n",
+      "Epoch 6/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.2762 - val_loss: 0.3150\n",
+      "Epoch 7/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2441 - val_loss: 0.3036\n",
+      "Epoch 8/10\n",
+      "59/59 [==============================] - 0s 3ms/step - loss: 0.2205 - val_loss: 0.2926\n",
+      "Epoch 9/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1976 - val_loss: 0.2913\n",
+      "Epoch 10/10\n",
+      "59/59 [==============================] - 0s 2ms/step - loss: 0.1819 - val_loss: 0.3008\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79/79 [==============================] - 0s 757us/step\n",
+      "313/313 [==============================] - 0s 709us/step\n",
+      "[array([   6,   10,   11, ..., 9994, 9995, 9997]), array([   3,    5,   15, ..., 9981, 9985, 9987]), array([   0,    1,    7, ..., 9992, 9998, 9999]), array([   2,    4,    8, ..., 9990, 9993, 9996])]\n",
+      "[   6   10   11 ... 9990 9993 9996]\n",
+      "logloss: 0.2966626217581332\n",
+      "logloss: 0.9864156538180981\n",
+      "[array([   6,   10,   11, ..., 9994, 9995, 9997]), array([   3,    5,   15, ..., 9981, 9985, 9987]), array([   0,    1,    7, ..., 9992, 9998, 9999]), array([   2,    4,    8, ..., 9990, 9993, 9996])]\n",
+      "[   6   10   11 ... 9990 9993 9996]\n",
+      "logloss: 0.28804267821907736\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_1a = Model1Xgb()\n",
+    "pred_train_1a, pred_test_1a = predict_cv(model_1a, train_x, train_y, test_x)\n",
+    "\n",
+    "model_1b = Model1NN()\n",
+    "pred_train_1b, pred_test_1b = predict_cv(model_1b, train_x_nn, train_y, test_x_nn)\n",
+    "\n",
+    "print(f'logloss: {log_loss(train_y, pred_train_1a, eps=1e-7)}')\n",
+    "print(f'logloss: {log_loss(train_y, pred_test_1b, eps=1e-7)}')\n",
+    "\n",
+    "train_x_2 = pd.DataFrame({'pred_1a': pred_train_1a, 'pred_1b': pred_test_1b})\n",
+    "test_x_2 = pd.DataFrame({'pred_1a': pred_test_1a, 'pred_1b': pred_test_1b})\n",
+    "\n",
+    "model_2 = Model2Linear()\n",
+    "pred_train_2, pred_test_2 = predict_cv(model_2, train_x_2, train_y, test_x_2)\n",
+    "print(f'logloss: {log_loss(train_y, pred_train_2, eps=1e-7)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e124f041",
+   "id": "48fd6438",
    "metadata": {},
    "outputs": [],
    "source": []
