迷路みたいな簡単なプログラムを実装するの楽しい

--- a/kagglebook-master/kaggle.ipynb
+++ b/kagglebook-master/kaggle.ipynb
@@ -7054,8 +7054,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "48fd6438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------------------------------\n",
+    "# データ等の準備\n",
+    "# ----------------------------------\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# データの作成（ランダムなデータとしています）\n",
+    "rand = np.random.RandomState(71)\n",
+    "train_x = pd.DataFrame(rand.uniform(0.0, 1.0, (10000, 2)), columns=['model1', 'model2'])\n",
+    "adv_train = pd.Series(rand.uniform(0.0, 1.0, 10000))\n",
+    "w = np.array([0.3, 0.7]).reshape(1, -1)\n",
+    "train_y = pd.Series((train_x.values * w).sum(axis=1) > 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9e78ae55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "n_sampling = 50\n",
+    "frac_sampling = 0.5\n",
+    "\n",
+    "def score(x, data_x, data_y):\n",
+    "    y_prob = data_x['model1'] * x  + data_x['model2'] * (1-x)\n",
+    "    return -roc_auc_score(data_y, y_prob)\n",
+    "\n",
+    "results = []\n",
+    "for i in range(n_sampling):\n",
+    "    seed = i\n",
+    "    idx = pd.Series(np.arange(len(train_y))).sample(frac=frac_sampling, replace=False, random_state=seed, weights=adv_train)\n",
+    "    x_sample = train_x.iloc[idx]\n",
+    "    y_sample = train_y.iloc[idx]\n",
+    "    \n",
+    "    init_x = np.array(0.5)\n",
+    "    constraints = (\n",
+    "        {'type': 'ineq', 'fun': lambda x:x},\n",
+    "        {'type': 'ineq', 'fun': lambda x: 1.0 -x},\n",
+    "    )\n",
+    "    result = minimize(score, x0=init_x, args=(x_sample, y_sample), constraints=constraints, method='COBYLA')\n",
+    "    results.append((result.x, 1.0 -result.x))\n",
+    "    \n",
+    "results = np.array(results)\n",
+    "w_model1, w_model2 = results.mean(axis=0)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5d34f50",
    "metadata": {},
    "outputs": [],
    "source": []
