数学的な解説を織り交ぜながらの機械学習の解説わかりやすい！

--- a/kaggle/meiro.ipynb
+++ b/kaggle/meiro.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5eec50cb",
+   "id": "ce5c278e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b958f66f",
+   "execution_count": 21,
+   "id": "913fad42",
    "metadata": {},
    "outputs": [
     {
@@ -165,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9a70a766",
+   "execution_count": 22,
+   "id": "683b4676",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
       "|   |   + - +   | \n",
       "|   |       |   | \n",
       "+ - - - - - - - + \n",
-      "elapsed time:  8.270948887 [sec]\n"
+      "('elapsed time', 8.322115898132324)\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bd68969d",
+   "id": "05b186fb",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8960b2a3",
+   "id": "c8b5b9fd",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fad1cde",
+   "id": "6efded05",
    "metadata": {},
    "outputs": [],
    "source": [
