--- a/statistic.ipynb
+++ b/statistic.ipynb
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b3e3637",
+   "id": "684a50ce",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44b9c277",
+   "id": "dd24476f",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4be7deb8",
+   "id": "0b4e0c59",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3d39cf4a",
+   "id": "ecc333b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "56411059",
+   "id": "aed0d20e",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2415ab16",
+   "id": "e998fdad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b6afe0bd",
+   "id": "9d37fd23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5d138237",
+   "id": "357bd2be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6110adc1",
+   "id": "11b7dbc7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "87b2fe7e",
+   "id": "108789e6",
    "metadata": {},
    "outputs": [
     {
@@ -655,8 +655,10 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "bb9d3395",
-   "metadata": {},
+   "id": "bbdc92e8",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -689,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1f246bb3",
+   "id": "5a5b66b1",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dbcbc258",
+   "id": "4cd5be8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e68548f4",
+   "id": "189e86d6",
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cd9c5843",
+   "id": "cef74d02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47322115",
+   "id": "6baa1746",
    "metadata": {},
    "outputs": [],
    "source": []
