DBSCANのこと思い出したぁぁぁぁ

--- a/ML11.ipynb
+++ b/ML11.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "67a20458",
+   "id": "9c3f7f15",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e84b010",
+   "id": "3d35311b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7478d621",
+   "id": "047b8017",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "566e72b5",
+   "id": "a95a42f9",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4cca18cc",
+   "id": "731aa313",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c92d91ed",
+   "id": "c23130fb",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "15a865a1",
+   "id": "51e36f5b",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "25914872",
+   "id": "f0a642f6",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c6fdb01b",
+   "id": "4c199250",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "06f1d7b8",
+   "id": "c1a2edc5",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0c371493",
+   "id": "8c81fd4c",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8f0fba81",
+   "id": "0b43d20c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "19665cf7",
+   "id": "1104882e",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9df296bc",
+   "id": "3ad837b7",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6698eedc",
+   "id": "acd123c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8,8), fc='white')\n",
+    "axd = fig.add_axes([0.09, 0.1, 0.2, 0.6])\n",
+    "row_dendr = dendrogram(row_clusters, orientation='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6202f84c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -795,15 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13e515c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3f21936",
+   "id": "59a2e9e1",
    "metadata": {},
    "outputs": [],
    "source": []
